# AISD_Lab1_CMake

./: CMakeLists.txt  README.md
cli/: Source.cpp
headers/: monomial.h  polynomial.h
test/: test.cpp
